// Package: net.ikigai.cds
// Module: cabinet.services
//
// Author: Narcis M. Pap
// Copyright (c) 2018 Ikigai Cloud. All rights reserved.

syntax = "proto3";
import "shared.proto";

// Registry is responsible for installing new Fields within the current CDS Cabinet store
// Fields have local UUID representations in development and Sequential uint16 representations in production
// Data is returned at uint32 yet it is safe to cast as uint16

// Schematic Representation:
// /reg/{PROPERTY_TYPE}/{SEQ_ID} = {UUID, NAME}

// IRI Representation:
// cds://cab@{APPLICATION.PLATFORM}:{REGION}/r/{PROPERTY_TYPE}/{SEQ_ID}


message FieldRegisterRequest{
    FieldType type = 1;

    string uuid = 2;
    string name = 3;
}

message FieldRegisterResponse{
    uint32 seq_id = 1;
}

message FieldGetRequest{
    oneof id {
        uint32 seq_id = 1;
        string uuid = 2;
    }
}

message FieldGetResponse{
    Field field = 1;
}

message FieldListRequest{
    FieldType type = 1;
}


message FieldListResponse{
    repeated Field field = 1;
}
